# TourGuideBot-tg

./: .dockerignore  .gitignore  .mergify.yml  Dockerfile  README.md  alembic.ini  babel.cfg  crowdin.yml  docker-compose.yml.example  docker_entrypoint.sh  pyproject.toml
.github/workflows/: ci.yaml  docker.yaml  test.yaml  tests.yaml
db_migrations/: env.py
db_migrations/versions/: 2022_07_29_1041-a975b155ed1b_initial_schema.py  2022_07_29_1125-959775b40b83_initial_schema.py  2022_07_30_1445-eecf06e78783_initial_schema.py  2022_07_31_1610-d84b9ed34ee5_add_content_for_the_tour_sections.py  2022_07_31_1717-4658f3573fbe_add_is_user_notified_column_for_bought_.py  2022_07_31_1904-2661986786cd_add_index_on_is_user_notified_column_in_.py  2022_08_03_2031-d237f493ca8f_remove_language_from_admin_guest.py  2022_08_14_1131-dd186ed90dec_initial_schema.py  2022_08_14_1729-4c08132e37ab_add_a_title_for_the_sections.py  2022_12_17_1822-48cb920beb31_add_animation_media_type.py  2023_05_18_1834-b44bd4455523_rename_boughttours_to_subscription.py  2023_05_18_1846-972be5c0855a_add_terms_support_message_settings.py  2023_05_18_2325-e3a388ce08d0_migration_settings_value_to_text.py  2023_05_19_2221-38c070a2b289_initial_version_for_payment_related_.py  2023_05_20_1827-e9b2b884612e_link_invoice_and_guest.py  2023_05_27_1317-57297f62237a_custom_title_and_description_for_every_.py  2023_05_27_2311-e08f30ab358c_make_admin_permissions_non_nullable.py  2023_06_04_2103-f0d460bb5317_telegramuser_id_to_bigint.py  2023_07_22_1323-dbf604473cee_multiple_guests_purchase.py
tests/: __init__.py  conftest.py  test_admin_add_tour_basic.py  test_admin_basic_tour_change_operations.py  test_admin_configure_support.py  test_admin_configure_terms.py  test_admin_configure_welcome.py  test_admin_known.py  test_admin_payment_settings.py  test_admin_permission_control_single_tour.py  test_admin_tour_payments.py  test_admin_unknown.py  test_base_app.py  test_currency_helper.py  test_guest_guest_payment.py  test_guest_known.py  test_guest_language_switching.py  test_guest_new_tours_notifications.py  test_guest_payment.py  test_guest_terms_and_support.py  test_guest_unconfigured.py  test_guest_unknown.py  test_guest_with_tours_basics.py  test_switch_mode.py
tour_guide_bot/: __init__.py  cli.py
tour_guide_bot/admin/: __init__.py  app.py  approve.py  configure.py  revoke.py  start.py  tour.py
tour_guide_bot/bot/: app.py
tour_guide_bot/bot/admin/: approve.py  bot_commands.py  configure.py  help.py  revoke.py  start.py  tour.py
tour_guide_bot/bot/admin/configure/: __init__.py  audio_to_voice.py  delay_between_messages.py
tour_guide_bot/bot/admin/configure/messages/: __init__.py  support.py  terms.py  welcome.py
tour_guide_bot/bot/admin/configure/payments/: __init__.py
tour_guide_bot/bot/admin/configure/payments/payment_provider/: __init__.py  add.py  change.py  delete.py
tour_guide_bot/bot/admin/tour/: __init__.py  add.py  add_content.py  delete.py  helpers.py  main.py  pricing.py
tour_guide_bot/bot/admin/tour/edit/: __init__.py  add_translation.py  rename.py
tour_guide_bot/bot/admin/tour/edit/section/: __init__.py  add.py  remove.py
tour_guide_bot/bot/admin/tour/pricing/: __init__.py  add.py  delete.py  edit.py
tour_guide_bot/bot/guide/: bot_commands.py  help.py  purchase.py  start.py  tours.py
tour_guide_bot/guide/: app.py  start.py  tours.py
tour_guide_bot/helpers/: __init__.py  application.py  currency.py  language.py  language_selector.py  payment_provider_selector.py  product_selector.py  telegram.py  tours_selector.py
tour_guide_bot/locales/: tour_guide_bot.pot
tour_guide_bot/locales/en-GB/LC_MESSAGES/: tour_guide_bot.po
tour_guide_bot/locales/en/LC_MESSAGE/: tour_guide_bot.po
tour_guide_bot/locales/en/LC_MESSAGES/: tour_guide_bot.po
tour_guide_bot/locales/ru/LC_MESSAGE/: tour_guide_bot.po
tour_guide_bot/locales/ru/LC_MESSAGES/: tour_guide_bot.po
tour_guide_bot/models/: __init__.py  admin.py  guest.py  guide.py  settings.py  telegram.py  tour.py
tour_guide_bot/web/: __init__.py  main.py
tour_guide_bot/web/admin/: __init__.py  access.py  base.py  configuration.py  index.py  tours.py
tour_guide_bot/web/templates/: index.html  index.html.j2  layout.html  layout.html.j2
tour_guide_bot/web/templates/admin/: configuration.html  index.html
