[project]
name = "tour_guide_bot"
version = "0.0.1"
requires-python = ">= 3.12"
license = "Apache-2.0"

[project.scripts]
bot = 'tour_guide_bot.cli:run'

[tool.poetry]
name = "tour_guide_bot"
version = "0.0.1"
description = ""
authors = ["Andrey Yantsen <andrey@janzen.su>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12.0"
python-telegram-bot = { version = "^20.7", allow-prereleases = true, extras = ["job-queue"] }
Babel = "^2.13.0 <2.14.0"
SQLAlchemy = { extras = ["asyncio", "aiomysql", "aiosqlite", "postgresql_asyncpg"], version = "^2.0.23" }
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
ffmpeg-python = "^0.2.0"
aiohttp = "^3.9.1"
aiohttp-jinja2 = "^1.5.1"
aiohttp-session = "^2.12.0"
cryptography = "^41.0.4"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.0.0"
ruff = "^0.1.6"
telethon = "^1.33.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["setuptools >= 40.6.0", "wheel", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    # Warning from past/builtins/misc, which out of our control
    "ignore:the imp module is deprecated in favour of importlib:DeprecationWarning",
    "ignore:'imghdr' is deprecated and slated for removal:DeprecationWarning",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]
markers = [
    "enabled_languages",
    "approved_tour_ids",
    "tours",
    "skip_payment_token_stub",
    "payment_tokens_count",
    "skip_adding_products",
    "products_count_in_default_tour",
]
asyncio_mode = "auto"

[tool.ruff]
ignore = ["E", "I"]
